--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ninja-game",
-  "version": "0.1.0",
+  "name": "portfolio",
+  "version": "0.4.0",
   "devDependencies": {
     "flightplan": "0.6.14",
     "grunt": "^1.0.1",
@@ -9,6 +9,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-http-server": "^1.16.0"
